<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="131dp"
        android:layout_height="31dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312" />

    <Button
        android:id="@+id/button_syntax"
        android:layout_width="@dimen/category"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="64dp"
        android:text="@string/ctg_syn"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_string"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_boolean"
        android:layout_width="@dimen/category"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="64dp"
        android:text="@string/ctg_boo"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_list"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_variable"
        android:layout_width="@dimen/category"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="64dp"
        android:text="@string/ctg_var"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_data"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_data"
        android:layout_width="@dimen/category"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:text="@string/ctg_dat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button_list"
        android:layout_width="@dimen/category"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:text="@string/ctg_lis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button_string"
        android:layout_width="@dimen/category"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/ctg_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>